fix teacher